JVMARGs changeable via global config